--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>My First Phaser Game</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script>
-    <script src="./src/game.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script> -->
+    <script type="module" src="./src/game.js"></script>
   </head>
   <body>
     <h1>My First Phaser Game</h1>
